@@ -8,6 +8,7 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2019-] added data structure TMCG_Bigint
+* [2019-04-29] RFC4880: added BinaryDocumentHashV5(), TextDocumentHashV5()
 * [2019-04-27] RFC4880: fixed memory leak in PacketDecode() found by fuzzying
 * [2019-04-21] RFC4880: added StandaloneHashV5(), CertificationHashV5()
 * [2019-04-21] RFC4880: added PacketScalar[Four,Eight]Encode(), KeyHashV5()
